--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/category-catalog/category-catalog.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/category-catalog/category-catalog.component.html
@@ -22,9 +22,9 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-4">
-    <h2 style="margin-top: 10px">Sell</h2>
+<div class="col">
+  <h2 style="margin-top: 10px;">Sell</h2>
+  <div class="row">
     <div *ngFor="let product of products | async">
       <div *ngIf="product.type == 'Sell'">
         <app-product-item [product]="product"></app-product-item>
@@ -32,8 +32,8 @@
     </div>
   </div>
 
-  <div class="col-md-4">
-    <h2 style="margin-top: 10px">Lend</h2>
+  <h2 style="margin-top: 10px">Lend</h2>
+  <div class="row">
     <div *ngFor="let product of products | async">
       <div *ngIf="product.type == 'Lend'">
         <app-product-item [product]="product"></app-product-item>
@@ -41,8 +41,8 @@
     </div>
   </div>
 
-  <div class="col-md-4">
-    <h2 style="margin-top: 10px">Hire</h2>
+  <h2 style="margin-top: 10px">Hire</h2>
+  <div class="row">
     <div *ngFor="let product of products | async">
       <div *ngIf="product.type == 'Hire'">
         <app-product-item [product]="product"></app-product-item>
@@ -50,8 +50,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
