--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -23,8 +23,8 @@
       <hr>
       <img *ngIf="(loggedIn | async ) && !(isAdmin | async)" src="{{iconPath()}}" id="wishlistIcon" (click)="changeWishlist()">
       <button type="button" class="btn btn-md" *ngIf="(userId | async) != product.userId.toString() && (loggedIn | async) && product.status == true && !(isAdmin | async)" (click)="openPurchaseDialog()" style="float:right; background-color: rgb(116, 153, 255); color: rgb(255, 255, 255)">Buy</button>
-      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="((userId | async)==product.userId.toString())" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
-      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(product.approved == false && (isAdmin | async))" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
+      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="((userId | async)==product.userId.toString())" (click)="openDeleteDialog(product.productId)" style="float:right">Delete</button>
+      <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(product.approved == false && (isAdmin | async))" (click)="openDeleteDialog(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md" *ngIf="(isAdmin | async) && !product.approved" (click)="onApprove()" style="float:right; background-color: rgb(110, 202, 110); color: rgb(255, 255, 255)">Approve</button>
       <button type="button" class="btn btn-md" *ngIf="(userId | async)==product.userId" (click)="change=true" [hidden]="change" style="float:right; background-color: rgb(57, 68, 97); color: rgb(255, 255, 255)">Change</button>
       <div id="change" [hidden]="!change">
