--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -133,7 +133,7 @@
               <mat-card-content>
                 <p>Price at point of sale: {{bought.pointOfSalePrice}}</p>
               </mat-card-content>
-              <app-product-review [productId]="bought.productId"></app-product-review>
+              <app-product-review [productId]="bought.productId" [productType]="bought.type"></app-product-review>
             </mat-card>
           </div>
         </div>
