add reviews in db

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-description/product-description.component.html
@@ -20,7 +20,7 @@
     </div>
     </mat-card>
     <mat-card>
-      <h1>Seller Reviews</h1>
+      <h1>Other Reviews of this Seller</h1>
       <p *ngIf="!(sellerReviews | async)?.length">There aren't any reviews yet!</p>
       <div *ngFor="let review of sellerReviews | async">
         <div class="body" style="margin-bottom: 30px;">
